anv: dEQP-VK.subgroups.ballot_broadcast.compute.subgroupbroadcast_i8vec3_requiredsubgroupsize16 fails on ICL, TGL
With vk-gl-cts master. Output is
deqp-vk: ../src/intel/compiler/brw_fs_generator.cpp:2749: int fs_generator::generate_code(const cfg_t*, int, shader_stats, const brw::performance&, brw_compile_stats*): Assertion validated failed.
Edited by Tapani Pälli